# edgemap

./: .gitignore  AGENTS.md  BUGFIX.md  Cargo.toml  DS4_TARGET_STATUS.md  PKGBUILD  README.md  STATUS.md  V009_REFACTOR_NOTES.md  dseuhid.service  edgemap-gui-v3.py  edgemap-gui-v4.py  edgemap-gui-v6.py  edgemap.desktop  edgemap.install  edgemap.service  install.sh  validate.md
.github/workflows/: ci.yml  release.yml
completions/: _dseuhid  _edgemap
docs/: BT_GYRO_INVESTIGATION.md  BUGFIX.md  DS4_TARGET_STATUS.md  HD-HAPTICS-FIX.md  STATUS.md  proton-dualsense-containerid.patch
gui/: __main__.py  edgemap-gui
gui/edgemap_gui/: __init__.py  app.py  capabilities.py  config_document.py  edgemap_client.py  editor.py  paths.py  serializer.py
scripts/: build_gui_zipapp.py  stage_release.sh
src/: capabilities.rs  codec.rs  config.rs  control.rs  daemon.rs  descriptor.rs  device.rs  keyboard.rs  keycodes.rs  lib.rs  main.rs  mapping.rs  model.rs  monitor.rs  proxy.rs  report.rs  session.rs  shutdown.rs  touchdemo.rs  uhid.rs
src/codec/: ds4_usb.rs  ds5_bt.rs  ds5_usb.rs  feature.rs  mod.rs  types.rs
src/config/: compile.rs  default.toml  io.rs  mod.rs  schema.rs  targets.rs  validate.rs
src/control/: client.rs  lock.rs  mod.rs  protocol.rs  server.rs  transport.rs
src/device/: discovery.rs  hidraw.rs  mod.rs  monitor.rs  permissions.rs
src/proxy/: mod.rs  pipeline.rs  repeat.rs  (+2 more)
tests/: cli_output.rs  test_gui.py  test_install.sh
tools/: README.md  ds4-caps.txt  ds4-probe  ds4-probe.c  ds4-rewasd-caps.txt  ds5-caps.txt  hid-inspect.c  version-fix.c
(+5 files in other folders)
