[package]
name = "dseuhid"
version = "0.7.2"
edition = "2021"
license = "GPL-3.0-or-later"

[dependencies]
nix = { version = "0.29", features = ["ioctl", "event", "poll", "fs", "signal"] }
log = "0.4"
env_logger = "0.11"
libc = "0.2.186"
toml = "0.8"
serde = { version = "1", features = ["derive"] }

[profile.release]
opt-level = 2
